# Movie_test

./: README.md  pyproject.toml
IMDBmovie_rating/: CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
IMDBmovie_rating/docs/: Makefile  conf.py  example.ipynb  make.bat
IMDBmovie_rating/src/IMDBmovie_rating/: IMDBmovie_rating.py  __init__.py
IMDBmovie_rating/tests/: test_IMDBmovie_rating.py
