[tool.poetry]
name = "IMDBmovie_rating"
version = "0.2.0"
description = "A package for doing great things!"
authors = ["Gillian Sun"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.3.5"
matplotlib = "^3.5.1"
ipython = "^7.30.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
